# data-pipeline

./: pyproject.toml
.github/workflows/: main.yml
conf/tasks/: mltask_config.yml
dataxml/tasks/: mltask.py  myapp.py
tests/unit/: conftest.py  test_mltask.py
